# cyberdyne

./: README.md  SECURITY.md  pyproject.toml
examples/: events.jsonl  policy.json
src/cyberdyne/: __init__.py  cli.py  governor.py
tests/: test_governor.py
